--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
+    "dayjs": "^1.11.13",
     "firebase": "^11.6.1",
     "formik": "^2.4.6",
+    "humanize-duration": "^3.32.1",
     "js-sha256": "^0.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
