--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
+    "@mui/x-date-pickers": "^8.2.0",
     "dayjs": "^1.11.13",
     "firebase": "^11.6.1",
     "formik": "^2.4.6",
