--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,5 +33,5 @@ jobs:
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_SIMPLE_ATTENDANCE_GV }}
-          projectId: simple-attendance-gv
+          projectId: ${{ secrets.VITE_FIREBASE_PROJECT_ID }}
           channelId: live
