--- a/.github/workflows/update-current-date.yml
+++ b/.github/workflows/update-current-date.yml
@@ -28,8 +28,8 @@ jobs:
 
       - name: Update currentDate in Firebase
         env:
-          FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
-          PROJECT_ID: ${{ env.PROJECT_ID }}
+          FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_SIMPLE_ATTENDANCE_GV }}
+          PROJECT_ID: ${{ secrets.VITE_FIREBASE_PROJECT_ID }}
         run: |
           echo "$FIREBASE_SERVICE_ACCOUNT" > serviceAccount.json
 
